--- a/first-spring-boot/first-spring-boot/src/main/resources/application.properties
+++ b/first-spring-boot/first-spring-boot/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show_sql=true
 
 
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jsp
 
 #spring.security.user.name=scott
 #spring.security.user.password=tiger
